test/libsolidity/syntaxTests/errors/error_in_interface.sol
interface C {
    error E(uint);
}
// ----
